# roll-errors-example

./: Anchor.toml  READM.md  README.md
my-new-prog/: FIXES.md
my-new-prog/programs/my-new-prog/src/: accounts.rs  events.rs  lib.rs
my-new-prog/programs/my-new-prog/src/accounts_folder/: mod.rs
my-new-prog/programs/my-new-prog/src/instructions/: place_bet.rs
my-new-prog/tests/: my-new-prog.ts
programs/my-new-prog/: Cargo.toml
programs/my-new-prog/src/: bet_state_accounts.rs  errors.rs
programs/my-new-prog/src/accounts_folder/: global_state.rs  roll_state.rs  treasury_account.rs
programs/my-new-prog/src/instructions/: mod.rs  place_bet.rs
